[project]
name = "llm-driven-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "mcp[cli]>=1.12.4",
    "openai>=1.99.5",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "streamlit>=1.48.1",
]
